--- a/package.json
+++ b/package.json
@@ -205,6 +205,7 @@
     "electron-debug": "^1.5.0",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
+    "normalize.css": "^8.0.0",
     "protobufjs": "^6.8.6",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
