--- a/package.json
+++ b/package.json
@@ -200,7 +200,7 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "bootstrap": "^4.1.1",
+    "classnames": "^2.2.6",
     "devtron": "^1.4.0",
     "electron-debug": "^1.5.0",
     "font-awesome": "^4.7.0",
@@ -209,6 +209,7 @@
     "protobufjs": "^6.8.6",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-flexbox-grid": "^2.1.2",
     "react-hot-loader": "^4.2.0",
     "react-jsonschema-form": "^1.0.3",
     "react-redux": "^5.0.7",
