--- a/package.json
+++ b/package.json
@@ -200,6 +200,9 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/react-fontawesome": "0.0.20",
     "classnames": "^2.2.6",
     "devtron": "^1.4.0",
     "electron-debug": "^1.5.0",
