--- a/app/package.json
+++ b/app/package.json
@@ -1,24 +1,16 @@
 {
-  "name": "electron-react-boilerplate",
-  "productName": "electron-react-boilerplate",
+  "name": "project-companion-app",
+  "productName": "Project Companion",
   "version": "1.0.0",
-  "description": "Electron application boilerplate based on React, React Router, Webpack, React Hot Loader for rapid application development",
+  "description": "Project companion has the tools you need during your development.",
   "main": "./main.prod.js",
   "author": {
-    "name": "C. T. Lin",
-    "email": "chentsulin@gmail.com",
-    "url": "https://github.com/chentsulin"
+    "name": "AaronTee",
+    "email": "AaronTee93@gmail.com"
   },
   "scripts": {
     "electron-rebuild": "node -r babel-register ../internals/scripts/ElectronRebuild.js",
     "postinstall": "npm run electron-rebuild"
-  },
-  "build": {
-    "fileAssociations": [
-      {
-        "ext": "proto"
-      }
-    ]
   },
   "license": "MIT",
   "dependencies": {
