--- a/package.json
+++ b/package.json
@@ -196,6 +196,8 @@
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/react-fontawesome": "0.0.20",
+    "axios": "^0.18.0",
+    "chart.js": "^2.7.2",
     "classnames": "^2.2.6",
     "d3": "^5.7.0",
     "devtron": "^1.4.0",
@@ -205,6 +207,7 @@
     "normalize.css": "^8.0.0",
     "protobufjs": "^6.8.6",
     "react": "^16.4.0",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.4.0",
     "react-flexbox-grid": "^2.1.2",
     "react-hot-loader": "^4.2.0",
