Added socket helper

--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dev-companion-app",
   "productName": "Dev Companion",
-  "version": "1.1.1",
+  "version": "1.1.4-devtool",
   "description": "Dev companion has the tools you need during your development.",
   "main": "./main.prod.js",
   "author": {
