--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     ]
   },
   "devDependencies": {
+    "@types/socket.io-client": "^1.4.32",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-jest": "^23.0.0",
@@ -189,7 +190,7 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^2.1.4",
+    "webpack-cli": "3.1.1",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
@@ -200,11 +201,14 @@
     "axios": "^0.18.0",
     "chart.js": "^2.7.2",
     "classnames": "^2.2.6",
+    "codemirror": "^5.45.0",
     "d3": "^5.7.0",
     "devtron": "^1.4.0",
     "electron-debug": "^1.5.0",
+    "file": "^0.2.2",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
+    "jsonlint": "^1.6.3",
     "node-gyp": "^3.8.0",
     "normalize.css": "^8.0.0",
     "protobufjs": "^6.8.6",
@@ -222,7 +226,9 @@
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.2.0",
-    "source-map-support": "^0.5.6"
+    "socket.io-client": "^2.2.0",
+    "source-map-support": "^0.5.6",
+    "system": "^2.0.1"
   },
   "devEngines": {
     "node": ">=7.x",
