--- a/package.json
+++ b/package.json
@@ -218,6 +218,7 @@
     "react-flexbox-grid": "^2.1.2",
     "react-hot-loader": "^4.2.0",
     "react-jsonschema-form": "^1.0.3",
+    "react-modal": "^3.8.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
